Created project boilerplate

--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@
 APP_ENV=dev
 APP_SECRET=b887b7abb0b96587690d1178c7b2dbef
 ###< symfony/framework-bundle ###
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=mariadb-10.5.8"
