Added jwt authentication to the application. Added serializer library.

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ APP_ENV=dev
 APP_SECRET=b887b7abb0b96587690d1178c7b2dbef
 ###< symfony/framework-bundle ###
 DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=mariadb-10.5.8"
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pub
+JWT_PASSPHRASE=secretkey
+###< lexik/jwt-authentication-bundle ###
