--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,17 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "gesdinet/jwt-refresh-token-bundle": "^0.12.0",
         "landingi/event-store-bundle": "^1.1",
+        "lexik/jwt-authentication-bundle": "^2.12",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
+        "symfony/security-bundle": "5.3.*",
+        "symfony/serializer": "5.3.*",
         "symfony/validator": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
@@ -70,6 +74,7 @@
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^5.3",
         "symfony/css-selector": "^5.3",
-        "symfony/phpunit-bridge": "^5.3"
+        "symfony/phpunit-bridge": "^5.3",
+        "symfony/var-dumper": "5.3.*"
     }
 }
