--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+gesdinet_jwt_refresh_token:
+  path:       /api/auth/refresh-token
+  controller: gesdinet.jwtrefreshtoken::refresh
