--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+
     enable_authenticator_manager: true
 
     firewalls:
@@ -6,13 +7,14 @@ security:
             pattern: ^/api/auth
             stateless: true
             json_login:
-                provider: my_in_memory_users
+                provider: auth_user_provider
                 check_path: /api/auth/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
         api:
             pattern: ^/api
             stateless: true
+            provider: auth_user_provider
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
@@ -22,10 +24,16 @@ security:
         - { path: ^/api,      roles: IS_AUTHENTICATED_FULLY }
 
     encoders:
-        Symfony\Component\Security\Core\User\User: bcrypt
+        App\Entity\User: bcrypt
 
     providers:
-        my_in_memory_users:
-            memory:
-                users:
-                    admin: { password: $2y$13$EbkTgkCMNJ51AKt4IW9DJuaFpSSvZNBcDSMbuCsw./m/quGprYXoi, roles: [ 'ROLE_ADMIN' ] }
+        jwt:
+            lexik_jwt:
+                class: App\Entity\User
+
+        auth_user_provider:
+            id: api_bundle.security.auth_user_provider
+
+    role_hierarchy:
+        ROLE_USER: ROLE_USER
+        ROLE_ADMIN: ROLE_USER
